[Command buffer]: Generate INVALID_OPERATION if designated attachments in read fb miss image during blitting

BUG=672719
TEST=conformance2/rendering/read-draw-when-missing-image.html

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Committed: https://crrev.com/82c5e7626da49727e5d8990a5f1b4e01d108f168 [formerly 25231a97c1a3eba9e26ff8fa5601e29b21672b73]
Review-Url: https://codereview.chromium.org/2570823002
Cr-Original-Commit-Position: refs/heads/master@{#438477}
Cr-Commit-Position: refs/heads/master@{#439080}

Former-commit-id: fd697d665dfbc3e40166ab144b5573413628e2e4